takasi commit new file

--- a/sample.html
+++ b/sample.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>タイトル</h1>
+    <h1 id="title">タイトル</h1>
     <h2>副題</h2>
 
     <p>これはパラグラフです。文節を記述するためのタグです。一部分をマーキングする場合は<span>スパン</span>を使用します。</p>
