make new dir and moved old files and added new files

--- a/book_game_tanaka/css-study2.html
+++ b/book_game_tanaka/css-study2.html
@@ -2,24 +2,8 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <style>
-      * {
-        font-size: 12px;
-      }
-      h1 {
-        font-size: 22px;
-      }
-      #comment {
-        color: green;
-      }
-      .even {
-        color: purple;
-      }
-      .odd {
-        color: red;
-      }
-    </style>
+    <title>CSS STUDY</title>
+    <link rel="stylesheet" href="LinkElement.css">
   </head>
   <body>
     <h1>1章：HTML</h1>
